Add Google Docs-style link formatting for About Me content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
         margin-bottom: 0.25rem;
       }
 
+      /* Editor Content Link Styles - Google Docs style */
+      .editor-content a {
+        color: #1A73E8;
+        text-decoration: underline;
+        text-decoration-color: #1A73E8;
+        text-underline-offset: 2px;
+        cursor: pointer;
+        transition: all 0.15s ease;
+      }
+      .editor-content a:hover {
+        color: #1765CC;
+        text-decoration-color: #1765CC;
+      }
+      .editor-content a:visited {
+        color: #1A73E8;
+      }
+
       @media print {
         html, body {
           background-color: white;
