Fix toolbar selectors and spacing issues
- Fixed font size selector being grayed out by moving disabled state to visual elements only
- Removed confusing zoom and styles dropdown controls
- Made font and size selectors display current values dynamically
- Added FormatState tracking for fontFamily and fontSize
- Fixed font name display to show only primary font (not full CSS stack)
- Made font/size selectors visible on mobile
- Fixed empty paragraph spacing to preserve blank lines from Notion

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
       user-select: auto;
     }
 
+    /* Preserve empty paragraphs for proper spacing */
+    .editor-content p:empty,
+    .editor-content p:has(br:only-child) {
+      min-height: 1.5em;
+      line-height: 1.5em;
+    }
+
     @media print {
 
       html,
